--- a/baequest/src/blocks/profile.css
+++ b/baequest/src/blocks/profile.css
@@ -37,6 +37,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: top;
 }
 
 .profile__avatar-placeholder {
